[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fireball.gd" type="Script" id=1]
[ext_resource path="res://assets/fx/9.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fireball"
length = 0.3
loop = true
step = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0998798, 0.198456 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 5.68789

[node name="Fireball" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fireball = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5411, 0 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, -4.76837e-007 )
scale = Vector2( 0.55, 0.6 )
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
